# time-lapse-scripts

./: .gitignore  Makefile  README.md  generate_script.py  move_results.py  pyproject.toml  requirements-mypy.txt  requirements-ty.txt  requirements.txt
.github/workflows/: tests.yml
scripts/: 080614_S60_Hibiscus.py  090712_DSC_1.py  090712_DSC_Tokyo_Tower.py  090721_DSC_Shanghai_Jiao_Tong_University.py  090727_DSC_Narita_International_Airport.py  090727_DSC_Shanghai_Pudong_Airport.py  100914_DSC_Utrecht_Centraal.py  100924_DSC_1_2.py  101129_DSC_1.py  101203_DSC_2.py  101231_DSC_1.py  110101_DSC_1.py  110209_ADL_1.py  110311_DSC_Holland_Casino.py  110515_110521_110522_DSC.py  110912_ADL_1.py  120506_ARN_1_2.py  120515_ARN_N409.py  120524_ADL_ARN_EC_Archery.py  120827_ADL_Europalaan.py  121004_ARN_1.py  121103_ARN_2.py  130305_ARN_1_2.py  130424_ARN_2.py  130505_ARN_4.py  130505_ARN_6.py  140416_140417_ARN_1.py  140416_ARN_140417_1.py  140608_ADL_Slot_Zeist.py  150205_150206_ARN_1.py  150312_ADL_1_2_3_5.py  150409_ARN_Cloud_chamber.py  150928_ADL_ARN_Lunar_Eclipse.py  151003_ARN_Nikhef.py  151203_ADL_1_3_4.py  160605_ADL_Taboe_Tango.py  160813_ADL_1_2.py  160813_ARN_Rhein_in_Flammen.py  170218_ADL_Utrecht_Centraal.py  171119_ADL_N230.py  (+104 more)
