[project]
name = 'time-lapse-scripts'
requires-python = '>=3.13'
version = '0.0.0'
dependencies = [
    'time-lapse==9.0',
]

[dependency-groups]
dev = [
    'ruff==0.14.13',
    'ty==0.0.12',
]

[tool.uv.sources.time-lapse]
path = "../time-lapse"
editable = true

[tool.ty.rules]
unresolved-attribute = 'ignore'

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.format]
quote-style = 'single'  # Prefer single quotes, except for triple quotes strings

[tool.ruff.lint]
select = ['ALL']  # https://docs.astral.sh/ruff/rules/
ignore = [
    'CPY001',  # Do not require copyright notices
    'D',  # Ignore docstring checks
    'DTZ007',  # Ignore missing timezone
    'E501',  # Some paths are very long
    'EM',  # Allow messages directly in exceptions
    'FBT001',  # Allow positional for boolean arguments
    'FBT002',  # Allow default value for boolean arguments
    'N999',  # Allow invalid module names for scripts
    'PD',  # Not using pandas
    'PLR0913',  # Allow functions with many arguments
    'PT',  # Not using pytest
    'RET504',  # Allow variable assignment before return
    'S311',  # Allow pseudo-random generators for non-cryptographic purpose
    'SIM108',  # Allow if-else block instead of ternary
    'SLF001',  # Allo private member access
    'T201',  # Allow using print
    'TRY003',  # Specific messages for common exception classes
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
lines-between-types = 1
section-order = [
    'future',
    'standard-library',
    'third-party',
    'time_lapse',
    'first-party',
    'local-folder',
]

[tool.ruff.lint.isort.sections]
time_lapse = ['time_lapse']
